[package]
name = "npyz"
version = "0.6.0"
edition = "2021"
authors = [
    "Michael Lamparski <diagonaldevice@gmail.com>",
    "Pavel Potocek <pavelpotocek@gmail.com>",
]
license = "MIT"
description = "NumPy file format (de-)serialization. Fork of outdated npy-rs."
repository = "https://github.com/ExpHP/npyz"
homepage = "https://github.com/ExpHP/npyz"
documentation = "https://docs.rs/npyz/"
keywords = ["numpy", "npy", "ndarray"]
categories = ["encoding"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [ "derive" ]

[dependencies]
byteorder = "1"
nom = "3"
zip = { version = "0.5", optional = true }

# NOTE: public dependencies, so make sure the doc links in lib.rs are kept in sync
num-complex = { version = "0.4", optional = true }
arrayvec = { version = "0.7.2", optional = true }

[dependencies.npyz-derive]
path = "derive"
version = "0.6.0"
optional = true
default-features = false

[dev-dependencies]
# For examples ONLY.  We don't want to provide a public interface because ndarray undergoes
# breaking semver bumps very frequently.
#
# Also, sprs has an ndarray dependency that might not be the most recent.
ndarray = { version = "0.14" }
sprs = { version = "0.10", default-features = false }
bencher = { version = "0.1" }

[features]
default = []

# Features are documented in lib.rs
derive = ["dep:npyz-derive"]
arrayvec = ["dep:arrayvec"]
complex = ["dep:num-complex"]
npz = ["zip"]  # can't be dep:zip because a test wants to use zip

[[bench]]
name = "bench"
harness = false

[[example]]
name = "structured"
required-features = ["derive"]

[[example]]
name = "roundtrip"
required-features = ["derive"]

[[example]]
name = "npz-without-feature"
# IMPORTANT: This MUST NOT use the "npz" feature (this is the whole point!),
#            in order to verify that certain functions are still exposed without it.
#            We want it to use `zip` on its own, not through npyz.
required-features = ["zip"]  # only required because an optional dependency can't also be a dev dependency

[[example]]
name = "sparse-sprs"
required-features = ["npz"]

[[test]]
name = "derive_hygiene"
required-features = ["derive"]

[[test]]
name = "roundtrip"
required-features = ["derive"]

[[test]]
name = "serialize_array"
required-features = ["derive"]

[[test]]
name = "npz"
required-features = ["npz"]

[[test]]
name = "sparse"
required-features = ["npz"]
