[package]
name = "npyz"
version = "0.8.4"
edition = "2021"
authors = [
    "Michael Lamparski <diagonaldevice@gmail.com>",
    "Pavel Potocek <pavelpotocek@gmail.com>",
]
license = "MIT"
description = "NumPy file format (de-)serialization. Fork of outdated npy-rs."
repository = "https://github.com/ExpHP/npyz"
homepage = "https://github.com/ExpHP/npyz"
documentation = "https://docs.rs/npyz/"
keywords = ["numpy", "npy", "ndarray"]
categories = ["encoding"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [ "derive" ]

[dependencies]
byteorder = "1"
py_literal = "0.4"
num-bigint = "0.4"

# NOTE: public dependencies, so make sure the doc links in lib.rs are kept in sync
num-complex = { version = "0.4", optional = true }
arrayvec = { version = "0.7.2", optional = true }
half = { version = "2.1.0", optional = true }


[dependencies.npyz-derive]
path = "derive"
version = "0.7.0"
optional = true
default-features = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zip = { version = "0.6",optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
zip = { version = "0.6", default-features = false,features = ["deflate"],optional = true}

[dev-dependencies]
# For examples ONLY.  We don't want to provide a public interface because ndarray undergoes
# breaking semver bumps very frequently.
#
# Also, sprs has an ndarray dependency that might not be the most recent.
ndarray = { version = "0.15" }
sprs = { version = "0.11", default-features = false }
bencher = { version = "0.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
zip = { version = "0.6", default-features = true }  # NOTICE: also in dependencies

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
zip = { version = "0.6", default-features = false,features = ["deflate"]}
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[features]
default = []

# Features are documented in lib.rs
derive = ["dep:npyz-derive"]
arrayvec = ["dep:arrayvec"]
complex = ["dep:num-complex"]
half = ["dep:half"]
npz = ["dep:zip"]

[[bench]]
name = "bench"
harness = false

[[example]]
name = "structured"
required-features = ["derive"]

[[example]]
name = "roundtrip"
required-features = ["derive"]

[[example]]
name = "sparse-sprs"
required-features = ["npz"]

[[test]]
name = "derive_hygiene"
required-features = ["derive"]

[[test]]
name = "roundtrip"
required-features = ["derive", "half"]

[[test]]
name = "serialize_array"
required-features = ["derive"]

[[test]]
name = "npz"
required-features = ["npz"]

[[test]]
name = "sparse"
required-features = ["npz"]
