[package]
name = "npyz-derive"
version = "0.7.0"
edition = "2018"
authors = [
    "Michael Lamparski <diagonaldevice@gmail.com>",
    "Pavel Potocek <pavelpotocek@gmail.com>",
]
license = "MIT"
description = "#[derive(...)]s for reading structured arrays in NPY files"
repository = "https://github.com/ExpHP/npyz"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
