[package]
name = "npy-derive"
version = "0.4.0"
edition = "2018"
authors = ["Pavel Potocek <pavelpotocek@gmail.com>"]
license = "MIT"
description = "Macros 1.1 implementation of #[derive(Serializable)] for crate npy"
repository = "https://github.com/potocpav/npy-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
